# ChangeLog for media-libs/libbs2b
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libbs2b/ChangeLog,v 1.22 2014/10/23 14:32:15 pacho Exp $

  23 Oct 2014; Pacho Ramos <pacho@gentoo.org> libbs2b-3.1.0-r1.ebuild:
  amd64/x86 stable, bug #526006

  21 Oct 2014; Jeroen Roovers <jer@gentoo.org> libbs2b-3.1.0-r1.ebuild:
  Stable for HPPA (bug #526006).

*libbs2b-3.1.0-r1 (27 Jul 2014)

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> +libbs2b-3.1.0-r1.ebuild:
  convert to multilib (used by ffmpeg)

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org> libbs2b-3.1.0.ebuild:
  Add ~mips keyword.

  28 Jul 2013; Alexis Ballier <aballier@gentoo.org> libbs2b-3.1.0.ebuild:
  keyword ~amd64-fbsd, bug #477750

  11 Jul 2012; Tim Harder <radhermit@gentoo.org> -libbs2b-3.0.0.ebuild,
  -files/libbs2b-3.0.0-freebsd.patch:
  Remove old.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libbs2b-3.0.0.ebuild,
  libbs2b-3.1.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Nov 2009; Raúl Porcel <armin76@gentoo.org> libbs2b-3.1.0.ebuild:
  sparc stable wrt #279238

  02 Sep 2009; Jeroen Roovers <jer@gentoo.org> libbs2b-3.1.0.ebuild:
  Stable for HPPA (bug #279238).

  31 Aug 2009; Brent Baude <ranger@gentoo.org> libbs2b-3.1.0.ebuild:
  Marking libbs2b-3.1.0 ppc64 for bug 279238

  28 Aug 2009; Tobias Klausmann <klausman@gentoo.org> libbs2b-3.1.0.ebuild:
  Stable on alpha, bug #279238

  02 Aug 2009; nixnut <nixnut@gentoo.org> libbs2b-3.1.0.ebuild:
  ppc stable #279238

  02 Aug 2009; Markus Meier <maekke@gentoo.org> libbs2b-3.1.0.ebuild:
  x86 stable, bug #279238

  26 Jul 2009; <chainsaw@gentoo.org> libbs2b-3.1.0.ebuild:
  Marked stable on AMD64 as a required dependency of Audacious 2.1; tested
  on a Xonar D2X soundcard with Grado SR325i headphones.

  26 Jun 2009; Raúl Porcel <armin76@gentoo.org> libbs2b-3.1.0.ebuild:
  Add ~sparc wrt #270203
