@@ -2,14 +2,14 @@
 Hash: SHA256
 
 DIST libbs2b-3.1.0.tar.bz2 606283 SHA256 4799974becdeeedf0db00115bc63f60ea3fe4b25f1dfdb6903505839a720e46f SHA512 50cf477ff9ce6adf26fa8a696831c3a4f219c80a21ec4c93be8ec3f67f077447c17abbd9588a9de5eeb3ddacac1564a7138807468fc80e853bc78f193b4afbc4 WHIRLPOOL c8703324bf54656af8533a5ce71234ca158f819498258426c5df2da87c4c4ebb0987217e1fecf39d5f510d9a96a6b6a7da0fa0c3db9c259b573448d35ba58374
-EBUILD libbs2b-3.1.0-r1.ebuild 677 SHA256 8c80f265cffafd26a4c8eb1fe2b9719199de4cf58aefd163e77094889ca8eed0 SHA512 d27ced983845950599ada6dfc017b132b92670ca148c48bb6f2304e2fd62e1a487f7d7b0b9e652652fb9d39c4d8f12adc83c31b08f7d945cad2f0c72735610c6 WHIRLPOOL 866c04b2ee9f6458bdbdbc8def6374aee306ce772419184e4cafda3a0f338703b3414ec06859771be6e71844fc3e5d7384e0ad86710e421054b7224cd96c9c37
+EBUILD libbs2b-3.1.0-r1.ebuild 677 SHA256 be8f34fbe8b498ab0acc97dc7ee578fe5f862e333834550d053935733f8ad66f SHA512 139fc262e1e79e1de40a2805c3ec789a7df673c2259e24e05f06e90c71fdb01535261ed7061c87e23b6760e1337f2f75a297852593e4e36dd9a886e399441140 WHIRLPOOL ce2e32c4af1986a6c8e848e96519934a2de008879905ac46c2b32b6b766361f4bbe0fc5ac0bd5aead0fabf4437838690c6a0acf626726672c8d540e7713caff2
 EBUILD libbs2b-3.1.0.ebuild 629 SHA256 67cbd85fd22d45d2b4175e91f6a97aa5a0d866ee6ad9833ab963f25a5024f91f SHA512 a55501c168ab5f43f4d3d4ffb3c770657bd850bb48e59914a1ad42e68c8291a88289f758ce70dcc970c60e8e33441979e55e82d1d204ad1735db4ff324b8bce6 WHIRLPOOL 60d8f21e46687ec5a26ceb5a1fabc32a33fb945a8ffe056e9c7f06efd9887602b3aedd12e3719b07aa93b49684ecbfa91f457f26c58f434ccfee9ee7e11d0236
-MISC ChangeLog 2947 SHA256 31f4be682e07d27da201d142a198000e99676c6548e1789c6e610ff173ca06e3 SHA512 39edc82f8285652c39dccdece206144610b39b6bd80c7d1d409ab0bda5e11762754db7c6df6aed3b06a6fca66e55374ff8c60a7ede0e6cb17afe1e1206cd2247 WHIRLPOOL afba6b113f1d9fb5be9992b7cf9abd893d87ffe1ea013a60a8aca2b4703ac0d2ecca736d7ca412eda7fe2fc5e117eb4783244f8fcfba8cc07fcb2dcc1c2a1c20
+MISC ChangeLog 3057 SHA256 8de6225e18842e9323f903b65c1a8ba5b599703ad84484882f85172e600ee8c0 SHA512 0bf11ceeac8d89a6a402d25e82f81b29c8d849beba3fb581badb625dc1d365871c7a24f13e05dadbb1d2e08ed70dc7d0ef89311bff5ddeba7aa8ad7ef98f8761 WHIRLPOOL 50f3871c3c71be4dfe7f28899d9c54730479bb3e3607df031f228044e6729a44b846e9b55a25d0c7380789020354ac30359ab36f0d48c802998f1647dfbbaacf
 MISC metadata.xml 258 SHA256 5fa59a9b0948090cf9ac59d499e93bf0b51c3a2f11a6cca666f2d4c03eca033d SHA512 900738229ca0bb825ee4c00f5ea0839566067012ca8818673f31dbdde3d6544a7c3356c169e38968b06dae25fbb88a28cfba105a4533c6b26d0df4de0b053200 WHIRLPOOL fbe74fb92b7652da70d244ceb77c52fc99b49971971267c6a8eb34902ca684dceda27dbb36b202d7c104d2178f8ea87d67681f1bd5df31fa080ce7b9a8ab179e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRJEXAACgkQCaWpQKGI+9QFDQCdHvP6Eb+p+OfpG4CLLb9+SG/P
-N6kAn2xECcG0M7TaXITg5Yhl1TzDh1Sd
-=6rln
+iEYEAREIAAYFAlS48zoACgkQuQc30/atMkBVCQCgtpyBsw8yV4Eau32xNVSnSu2e
+iGsAn3Zkr10+0P8QlTU2dS/NbKpTxSWK
+=QMsO
 -----END PGP SIGNATURE-----
