@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libbs2b
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libbs2b/ChangeLog,v 1.22 2014/10/23 14:32:15 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libbs2b/ChangeLog,v 1.23 2015/01/16 11:17:13 armin76 Exp $
+
+  16 Jan 2015; Raúl Porcel <armin76@gentoo.org> libbs2b-3.1.0-r1.ebuild:
+  alpha/sparc stable wrt #526006
 
   23 Oct 2014; Pacho Ramos <pacho@gentoo.org> libbs2b-3.1.0-r1.ebuild:
   amd64/x86 stable, bug #526006
